fixed img cover on mobile

--- a/gutenberg/templates/css/style.css
+++ b/gutenberg/templates/css/style.css
@@ -630,6 +630,14 @@ button.search:hover {
         /*color: #333 !important;*/
         margin: auto;
     }
+
+    #cover {
+        float: none;
+    }
+
+    .cover-art {
+        max-width: 100%;
+    }
 }
 
 
